--- a/example/index.html
+++ b/example/index.html
@@ -506,13 +506,13 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/verdemela1.JPG" texture-stretch="true" texture-scale="">
-                    <img alt="Thumbnail verdemela1" src="rooms/thumbnails/thumbnails_verdemela1.JPG" />
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/verdemela1.JPEG" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail verdemela1" src="rooms/thumbnails/thumbnails_verdemela1.JPEG" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/verdemela2.JPG" texture-stretch="true" texture-scale="">
-                    <img alt="Thumbnail verdemela2" src="rooms/thumbnails/thumbnails_verdemela2.JPG" />
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/verdemela2.JPEG" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail verdemela2" src="rooms/thumbnails/thumbnails_verdemela2.JPEG" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
