--- a/example/index.html
+++ b/example/index.html
@@ -526,6 +526,12 @@
                   </a>
                 </div>      
                 <!--  -->
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete01.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete01" src="rooms/thumbnails/thumbnails_parete01.jpg" />
+                  </a>
+                </div>      
+		
                 
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/azulmeta.jpg" texture-stretch="false" texture-scale="300">
