--- a/example/index.html
+++ b/example/index.html
@@ -525,14 +525,46 @@
                     <img alt="Thumbnail giallino2" src="rooms/thumbnails/thumbnails_giallino2.jpg" />
                   </a>
                 </div>      
-                <!--  -->
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete01.jpg" texture-stretch="true" texture-scale="">
                     <img alt="Thumbnail parete01" src="rooms/thumbnails/thumbnails_parete01.jpg" />
                   </a>
-                </div>      
-		
-                
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete02.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete02" src="rooms/thumbnails/thumbnails_parete02.jpg" />
+                  </a>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete03.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete03" src="rooms/thumbnails/thumbnails_parete03.jpg" />
+                  </a>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete04.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete04" src="rooms/thumbnails/thumbnails_parete04.jpg" />
+                  </a>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete05.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete05" src="rooms/thumbnails/thumbnails_parete05.jpg" />
+                  </a>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete06.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete06" src="rooms/thumbnails/thumbnails_parete06.jpg" />
+                  </a>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete07.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail parete07" src="rooms/thumbnails/thumbnails_parete07.jpg" />
+                  </a>
+                </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete08.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parete08" src="rooms/thumbnails/thumbnails_parete08.jpg" />
+                  </a>
+                </div>
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/azulmeta.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail azulmeta" src="rooms/thumbnails/thumbnails_azulmeta.jpg" />
