--- a/example/index.html
+++ b/example/index.html
@@ -561,8 +561,8 @@
                   </a>
                 </div>
 		<div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete08.jpg" texture-stretch="false" texture-scale="100">
-                    <img alt="Thumbnail parete08" src="rooms/thumbnails/thumbnails_parete08.jpg" />
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete08.JPG" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parete08" src="rooms/thumbnails/thumbnails_parete08.JPG" />
                   </a>
                 </div>
 		<div class="col-sm-6" style="padding: 3px">
