--- a/example/index.html
+++ b/example/index.html
@@ -365,6 +365,11 @@
                     <img alt="Thumbnail bianco" src="rooms/thumbnails/thumbnails_bianco.jpg" />
                   </a>
                 </div>
+		<div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/wallmap.png" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail wallmap grigio" src="rooms/thumbnails/thumbnails_wallmap.png" />
+                  </a>
+                </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/rosamix.jpg" texture-stretch="true" texture-scale="">
                     <img alt="Thumbnail rosamix" src="rooms/thumbnails/thumbnails_rosamix.jpg" />
