--- a/example/indexart.html
+++ b/example/indexart.html
@@ -8,6 +8,8 @@
 
     <!-- Make sure you've built blueprint3d.js -->
     <!-- See README.md for details -->
+<!-- Chiamala con  url in pagina singolo articolo nella forma seguente indexart.html?cod=123 che a sua volta richiama js/exampleC123.js  -->	  
+	  
     <script src="js/blueprint3d.js"></script>
 
     <script src="js/jquery.js"></script>
@@ -18,7 +20,7 @@
      <script src="js/items_1.js"></script>
     <script src="js/items_2.js"></script>
     
-    <script src="js/example.js"></script>
+    <script src="js/exampleC.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/html2canvas.js"></script>
