--- a/example/indexz0123.html
+++ b/example/indexz0123.html
@@ -18,7 +18,7 @@
      <script src="js/items_1.js"></script>
     <script src="js/items_2.js"></script>
     
-    <script src="js/example.js"></script>
+    <script src="js/zexample0123.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/html2canvas.js"></script>
