--- a/example/indexz0123.html
+++ b/example/indexz0123.html
@@ -760,7 +760,7 @@
             </div>
 
             <div id="loading-modal">
-              <h1>Caricamento Stanza di Esempio...</h1>  
+              <h1>Caricamento Arredo nella Stanza di Esempio...</h1>  
             </div>
           </div>
 
