--- a/example/zonlypaindex.html
+++ b/example/zonlypaindex.html
@@ -655,7 +655,7 @@
           <!-- 3D Viewer -->
           <div id="viewer">
 
-            <div id="main-controls">
+            <div id="main-controls"> <!--
               <a href="#" class="btn btn-default btn-sm" id="new">
                 Nuovo
               </a>
@@ -666,7 +666,7 @@
                <input type="file" class="hidden-input" id="loadFile">
                Carica
               </a>
-            
+            -->
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
   ImgJpg
