--- a/example/zonlypaindex.html
+++ b/example/zonlypaindex.html
@@ -25,7 +25,7 @@
        
   </head>
 
-  <body>
+  <body> <center>
 
     <div class="container-fluid">
       <div class="row main-row">
@@ -182,6 +182,6 @@
         <!-- End Right Column -->
       </div>
       
-
+    </center>
   </body>
 </html>
