--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=http://www.tuo-dominio.it">
+<meta http-equiv="refresh" content="0; url=http://storianum.github.io/storiablue/example/index.html">
 </head>
 <body>
 	ciao
