--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<script src="/loadingcss/pace.js"></script>
+	<link href="/loadingcss/cornerindicator.css" rel="stylesheet" />
 <meta http-equiv="refresh" content="0; url=http://storianum.github.io/storiablue/example/index.html">
 </head>
 <body>
