--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <head>
 	<script src="/loadingcss/pace.js"></script>
 	<link href="/loadingcss/cornerindicator.css" rel="stylesheet" />
+	
+<style>
+body {
+    color: rgb(34,153,221);
+}
+</style>
+	
 <meta http-equiv="refresh" content="0; url=http://storianum.github.io/storiablue/example/index.html">
 </head>
 <body>
-	ciao
+	Loading - Please Wait!
 </body>
 </html>
