--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 body {
     color: rgb(34,153,221);
 }
+p.thick {
+    font-weight: bold;
+}
 </style>
 	
 <meta http-equiv="refresh" content="0; url=http://storianum.github.io/storiablue/example/index.html">
 </head>
 <body>
-	Loading - Please Wait!
+	<p class="thick">Loading - Please Wait!</p>
 </body>
 </html>
