--- a/it.html
+++ b/it.html
@@ -1,1 +1,18 @@
-pagina in lingua italiana
+<html>
+<head>
+
+<style>
+body {
+    color: rgb(34,153,221);
+}
+p.thick {
+    font-weight: bold;
+}
+</style>
+	
+<meta http-equiv="refresh" content="0; url=http://storianum.github.io/storiablue/example/index.html">
+</head>
+<body>
+	<p class="thick">Loading - Please Wait!</p>
+</body>
+</html>
