--- a/example/index.html
+++ b/example/index.html
@@ -131,11 +131,10 @@
               <div class="panel-body" style="color: #333333">
 
                 <div class="col-sm-6" style="padding: 3px">
-		  <a href="http://www.ansa.it" target="_blank">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/light_fine_wood.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail light fine wood" src="rooms/thumbnails/thumbnail_light_fine_wood.jpg" />	  
                   </a>
-	          </a>
+	          <a href="http://www.libero.it" target="_blank">Compra ora!</a>
                 </div>
                 
                 <div class="col-sm-6" style="padding: 3px">
