--- a/example/index.html
+++ b/example/index.html
@@ -134,8 +134,9 @@
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/light_fine_wood.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail light fine wood" src="rooms/thumbnails/thumbnail_light_fine_wood.jpg" />	  
                   </a>
-	          <a href="http://www.libero.it" target="_blank">Compra ora!</a>
-                </div>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
+		</div>
+		
                 
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/cottoquad.jpg" texture-stretch="false" texture-scale="300">
