--- a/example/index.html
+++ b/example/index.html
@@ -163,172 +163,206 @@
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/ottagonogrigio.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail ottagono grigio" src="rooms/thumbnails/thumbnail_ottagonogrigio.jpg" />
                   </a>
+	          <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattonellebianche.JPG" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail mattonelle bianche" src="rooms/thumbnails/thumbnails_mattonellebianca.JPG" />
                   </a>
+		 <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/pavimnero.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail pavimnero" src="rooms/thumbnails/thumbnails_pavimnero.jpg" />
                   </a>
+		 <div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/esagonogrigio.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail esagono grigio" src="rooms/thumbnails/thumbnails_esagonogrigio.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/cottoscuro.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail cotto scuro" src="rooms/thumbnails/thumbnails_cottoscuro.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/CRosso.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail CRosso" src="rooms/thumbnails/thumbnails_CRosso.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/cottomedio.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail cottored" src="rooms/thumbnails/thumbnails_cottomedio.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattoverde.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail verde acqua" src="rooms/thumbnails/thumbnails_mattoverde.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattoazzurro.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail azzurro onda" src="rooms/thumbnails/thumbnails_mattoazzurro.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattobiancofuga.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail bianco con fuga nera" src="rooms/thumbnails/thumbnails_mattobiancofuga.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/Bianco-Carrara.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail bianco carrara" src="rooms/thumbnails/thumbnails_Bianco-Carrara.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/giallosiena.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail giallo siena" src="rooms/thumbnails/thumbnails_giallosiena.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigio_sahara.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail grigiosahara" src="rooms/thumbnails/thumbnails_grigio_sahara.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mixterre.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail mixterre" src="rooms/thumbnails/thumbnails_mixterre.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/pia_rosse.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail cotto pia_rosse" src="rooms/thumbnails/thumbnails_pia_rosse.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/starparq.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail star parquet" src="rooms/thumbnails/thumbnails_starparq.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/hardwood.png" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail hardwood" src="rooms/thumbnails/thumbnail_hardwood.png" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq3.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail parq3 " src="rooms/thumbnails/thumbnails_parq3.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq5.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail parq5" src="rooms/thumbnails/thumbnails_parq5.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq6.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail parq6" src="rooms/thumbnails/thumbnails_parq6.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq7.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail parq7" src="rooms/thumbnails/thumbnails_parq7.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/scacchiera.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail scacchiera" src="rooms/thumbnails/thumbnails_scacchiera.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/miniscac.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail miniscacchiera" src="rooms/thumbnails/thumbnails_miniscac.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/scaccmos.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail scacchiera mosaico marmo" src="rooms/thumbnails/thumbnails_scaccmos.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mosasgre.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail mosaico1" src="rooms/thumbnails/thumbnails_mosasgre.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mosaicocer.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail mosaicocer" src="rooms/thumbnails/thumbnails_mosaicocer.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq2.jpg" texture-stretch="false" texture-scale="400">
                     <img alt="Thumbnail parquet2" src="rooms/thumbnails/thumbnails_parq2.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquette.jpg" texture-stretch="false" texture-scale="500">
                     <img alt="Thumbnail moquette grigio scuro" src="rooms/thumbnails/thumbnails_moquette.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqnera.JPG" texture-stretch="false" texture-scale="500">
                     <img alt="Thumbnail moquette nera" src="rooms/thumbnails/thumbnails_moqnera.JPG" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquettegriver.jpg" texture-stretch="false" texture-scale="500">
                     <img alt="Thumbnail moquette grigio verde" src="rooms/thumbnails/thumbnails_moquettegriver.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqbianca.jpg" texture-stretch="false" texture-scale="500">
                     <img alt="Thumbnail moquette bianca" src="rooms/thumbnails/thumbnails_moqbianca.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquette_rossa.jpg" texture-stretch="false" texture-scale="500">
                     <img alt="Thumbnail moquette rossa" src="rooms/thumbnails/thumbnails_moquette_rossa.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/redsquare.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail redsquare" src="rooms/thumbnails/thumbnails_redsquare.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/sigarettarossa.jpg" texture-stretch="false" texture-scale="200">
                     <img alt="Thumbnail sigarettarossa" src="rooms/thumbnails/thumbnails_sigarettarossa.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 
               </div>
