--- a/example/index.html
+++ b/example/index.html
@@ -498,6 +498,7 @@
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/ubrinz.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail ubrinz" src="rooms/thumbnails/thumbnails_ubrinz.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/corallorosa.jpg" texture-stretch="false" texture-scale="100">
@@ -611,6 +612,7 @@
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete01.jpg" texture-stretch="true" texture-scale="">
                     <img alt="Thumbnail parete01" src="rooms/thumbnails/thumbnails_parete01.jpg" />
                   </a>
+		<div><a href="http://www.libero.it" target="_blank">Compra ora!</a></div>
                 </div>
 		<div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parete02.jpg" texture-stretch="true" texture-scale="">
