--- a/example/index.html
+++ b/example/index.html
@@ -42,15 +42,15 @@
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
             <li id="items_tab"><a href="#">
-              Aggiungi Arredo
+              Aggiungi Sedute
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
             <li id="items_tab_1"><a href="#">
-              Aggiungi Arredo 1
+              Aggiungi Tavoli / Scrivanie
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
             <li id="items_tab_2"><a href="#">
-              Aggiungi Arredo 2
+              Aggiungi Armadi / Cassettiere
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
           </ul>
