--- a/example/index.html
+++ b/example/index.html
@@ -53,6 +53,18 @@
               Aggiungi Armadi/Cassettiere
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
+           <li id="items_tab_3"><a href="#">
+              Aggiungi Carrelli
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+              </a></li>	
+	   <li id="items_tab_4"><a href="#">
+              Aggiungi Racks
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+              </a></li>
+	   <li id="items_tab_5"><a href="#">
+              Aggiungi Scaffalature
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+              </a></li>
           </ul>
           <hr />
 
