--- a/example/index.html
+++ b/example/index.html
@@ -927,12 +927,37 @@
           <!-- Add Items_2 commento-->
           <div id="add-items_2">   
             <div class="row" id="items-wrapper_2">  
-
+ 
               <!-- Items added here by items_2.js commento -->
+            </div>   
+          </div>
+		
+	 <!-- Add Items_3 commento-->
+          <div id="add-items_3">   
+            <div class="row" id="items-wrapper_3">  
+
+              <!-- Items added here by items_3.js commento -->
+            </div>   
+          </div>
+		
+	 <!-- Add Items_4 commento-->
+          <div id="add-items_4">   
+            <div class="row" id="items-wrapper_4">  
+
+              <!-- Items added here by items_4.js commento -->
             </div>   
           </div>
           
           
+	 <!-- Add Items_5 commento-->
+          <div id="add-items_5">   
+            <div class="row" id="items-wrapper_5">  
+
+              <!-- Items added here by items_5.js commento -->
+            </div>   
+          </div>
+		
+		
         </div> 
         <!-- End Right Column -->
       </div>
