--- a/example/index.html
+++ b/example/index.html
@@ -17,6 +17,9 @@
     
      <script src="js/items_1.js"></script>
     <script src="js/items_2.js"></script>
+    <script src="js/items_3.js"></script>
+    <script src="js/items_4.js"></script>
+    <script src="js/items_5.js"></script>
     
     <script src="js/example.js"></script>
 
