--- a/example/index.html
+++ b/example/index.html
@@ -80,7 +80,7 @@ var itemTypeVarJS = document.getElementById('itemTypetot').value;
 
 if (itemTypeVarJS !== "000") {
 
-    document.getElementById("context-menu").innerHTML = "
+    document.getElementById("context-menu").innerHTML = '
 
 <!-- qui tutti gli arredi da comprare con relative voci e bottoni -->
 
@@ -150,13 +150,13 @@ if (itemTypeVarJS !== "000") {
             </div>
 
 
-";
+';
 }
 
 else {
 
 
-document.getElementById("context-menu").innerHTML = "
+document.getElementById("context-menu").innerHTML = '
 
 <!-- qui tutti gli arredi che non si comprano con relative voci e bottoni di tipo ridotto rispetto a quelli acquistabili-->
 
@@ -215,7 +215,7 @@ document.getElementById("context-menu").innerHTML = "
             </div>
 
 
-";
+';
 }
 
 </script>  
