--- a/example/index.html
+++ b/example/index.html
@@ -82,6 +82,15 @@
               </button>
             <br />
               
+		    <label hidden><span id="modelPricetot"></span></label>
+
+<script>
+var selezionaElemJS = $("#modelPricetot").text();
+alert(selezionaElemJS);
+if (selezionaElemJS === "000") {
+    alert('ciao');
+}
+</script>
               
                 <a class="btn btn-block btn-info" href="" id="modelGallerylink" target="_blank">
                 <span class="glyphicon glyphicon-align-center"></span> 
