--- a/example/index.html
+++ b/example/index.html
@@ -82,12 +82,11 @@
               </button>
             <br />
               
-		    <label hidden><span id="modelPricetot"></span></label>
+<label hidden><span id="modelPricetot"></span></label>
 
 <script>
 var selezionaElemJS = $("#modelPricetot").text();
-alert(selezionaElemJS);
-if (selezionaElemJS === "000") {
+if (selezionaElemJS === "x,y &euro;") {
     alert('ciao');
 }
 </script>
