--- a/example/index.html
+++ b/example/index.html
@@ -83,7 +83,7 @@
             <br />
 		    
               
-<span id="modelPricetot" hidden></span>		    
+<span id="modelPricetot"></span>		    
  <p id="demozz"></p>
 <script>
 var conditionElemJS = $('#modelPricetot').text();
