--- a/example/index.html
+++ b/example/index.html
@@ -88,7 +88,7 @@
 
 <script>
 var selettoreif = $("#context-menu-name").text();
-document.getElementById("demo").innerHTML = selettoreif; 
+document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
 		    
