--- a/example/index.html
+++ b/example/index.html
@@ -87,7 +87,7 @@
 </div>
 
 <script>
-var selettoreif = document.getElementById("context-menu-name");
+var selettoreif = document.getElementById("context-menu-name").val();
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
