--- a/example/index.html
+++ b/example/index.html
@@ -87,7 +87,7 @@
 </div>
 
 <script>
-var selettoreif = document.getElementById("context-menu-name").outerText;
+var selettoreif = document.getElementById("context-menu-name").outerHTML;
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
