--- a/example/index.html
+++ b/example/index.html
@@ -87,8 +87,8 @@
 </div>
 
 <script>
-// var selettoreif = document.getElementById("context-menu-name").outerHTML;
-	var selettoreif = $("#context-menu-name").text();
+ var selettoreif = document.getElementById("context-menu-name").outerHTML;
+//	var selettoreif = $("#context-menu-name").text();
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
