--- a/example/index.html
+++ b/example/index.html
@@ -87,7 +87,7 @@
 </div>
 
 <script>
- var selettoreif = document.getElementById("modelPricetot");
+ var selettoreif = document.getElementById("context-menu-name").value;
 //	var selettoreif = $("#context-menu-name").text();
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
