--- a/example/index.html
+++ b/example/index.html
@@ -88,7 +88,7 @@
 
 <script>
  var selettoreif = document.getElementById("context-menu-name").value;
-//	var selettoreif = $("#context-menu-name").text();
+//	var selettoreif = $("#context-menu-name").html();
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
