--- a/example/index.html
+++ b/example/index.html
@@ -87,8 +87,8 @@
 </div>
 
 <script>
- var selettoreif = document.getElementById("context-menu-name").value;
-//	var selettoreif = $("#context-menu-name").html();
+ // var selettoreif = document.getElementById("context-menu-name").value;
+    var selettoreif = $("#context-menu-name").html();
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
