--- a/example/index.html
+++ b/example/index.html
@@ -89,8 +89,7 @@
 </div>
 
 <script>
- // var selettoreif = document.getElementById("context-menu-name").value;
-    var selettoreif = $("#context-menu-name").html();
+ var selettoreif = document.getElementById("selettoreifprezzo").innerHTML;
 document.getElementById("inserimento").innerHTML = selettoreif; 
 </script>
 		    
