--- a/example/index.html
+++ b/example/index.html
@@ -140,7 +140,7 @@ document.getElementById("inserimento").innerHTML = selettoreif;
 
             <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
  <!--  -->           <br />
-            <label><span class="text-muted" style="color:green">Prezzo: </span><i><span id="modelPricetot"></span></i></label>
+            <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i></label>
             <br /><br />
               
             <a class="btn btn-block btn-success" href="" id="modelBuybasketlink" target="_blank">
