--- a/example/index.html
+++ b/example/index.html
@@ -90,7 +90,7 @@
               
               
             <div class="panel panel-default">
-              <div class="panel-heading">Varia Dimensione</div>
+              <div class="panel-heading" id="contentdimens">Varia Dimensione</div>
               <div class="panel-body" style="color: #333333">
 
                 <div class="form form-horizontal" class="lead">
