--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,8 @@
 
     <script src="js/items.js"></script>
     
-     <script src="js/items_1.js"></script>
+    <script src="js/items_0.js"></script>  
+    <script src="js/items_1.js"></script>
     <script src="js/items_2.js"></script>
     <script src="js/items_3.js"></script>
     <script src="js/items_4.js"></script>
@@ -910,6 +911,16 @@
               Premi tasto "Esc" per finire disegno pareti
             </div>
           </div>
+		
+		
+	  <!-- Add Items_0 commento-->
+          <div id="add-items_0">   
+            <div class="row" id="items-wrapper_0">  
+
+              <!-- Items added here by items_0.js commento -->
+            </div>   
+          </div>
+		
 
           <!-- Add Items -->
           <div id="add-items">
