--- a/example/indexz0123.html
+++ b/example/indexz0123.html
@@ -45,6 +45,10 @@
               Progetto in Corso
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
+	    <li id="items_tab_0"><a href="#">
+              Complementi di Progetto
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+              </a></li>
             <li id="items_tab"><a href="#">
               Aggiungi Sedute
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
