--- a/example/zfloor2.html
+++ b/example/zfloor2.html
@@ -84,6 +84,11 @@ div.ciao {
     });
   });
 </script>
+	
+<a href="#" class="btn btn-default btn-sm" id="otherfloor">
+<span class="glyphicon glyphicon glyphicon-triangle-bottom"></span>Floor 1
+</a>
+		    
               
 <!-- insert label storiablue with its own link                  
 
