--- a/example/zfloor2.html
+++ b/example/zfloor2.html
@@ -65,10 +65,13 @@ div.ciao {
                Carica
               </a>
             -->
-
+<!--
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
   ImgJpg
-</a>  
+</a>  -->
+<a href="#" class="btn btn-default btn-sm" id="save_image_locally">
+<span class="glyphicon glyphicon glyphicon-screenshot"></span>Jpg
+</a>		    
 <script>
   $('#save_image_locally').click(function(){
     html2canvas($('#imagesave'), 
@@ -85,7 +88,7 @@ div.ciao {
   });
 </script>
 	
-<a href="#" class="btn btn-default btn-sm" id="otherfloor">
+<a href="/example/zfloor1.html" class="btn btn-default btn-sm" id="otherfloor">
 <span class="glyphicon glyphicon glyphicon-triangle-bottom"></span>Floor 1
 </a>
 		    
