--- a/example/zfloor2.html
+++ b/example/zfloor2.html
@@ -88,8 +88,8 @@ div.ciao {
   });
 </script>
 	
-<a href="/example/zfloor1.html" class="btn btn-default btn-sm" id="otherfloor">
-<span class="glyphicon glyphicon glyphicon-triangle-bottom"></span>Floor 1
+<a href="https://storianum.github.io/workshops/example/zfloor1.html" class="btn btn-default btn-sm" id="otherfloor">
+<span class="glyphicon glyphicon glyphicon-triangle-bottom"></span>&nbsp;Floor 1
 </a>
 		    
               
