--- a/example/zfloor2.html
+++ b/example/zfloor2.html
@@ -70,7 +70,7 @@ div.ciao {
   ImgJpg
 </a>  -->
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-<span class="glyphicon glyphicon glyphicon-screenshot"></span>Jpg
+<span class="glyphicon glyphicon-screenshot"></span>&nbsp; Jpg
 </a>		    
 <script>
   $('#save_image_locally').click(function(){
@@ -89,7 +89,7 @@ div.ciao {
 </script>
 	
 <a href="https://storianum.github.io/workshops/example/zfloor1.html" class="btn btn-default btn-sm" id="otherfloor">
-<span class="glyphicon glyphicon glyphicon-triangle-bottom"></span>&nbsp;Floor 1
+<span class="glyphicon glyphicon glyphicon-triangle-bottom"></span>&nbsp; Floor 1
 </a>
 		    
               
