--- a/example/zfloor2.html
+++ b/example/zfloor2.html
@@ -86,7 +86,7 @@ $( "#info-sign" ).click(function() {
 </script>	
 		    
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-<span class="glyphicon glyphicon-screenshot"></span>&nbsp; Jpg
+<span class="glyphicon glyphicon-screenshot"></span>
 </a>		    
 <script>
   $('#save_image_locally').click(function(){
