--- a/example/index.html
+++ b/example/index.html
@@ -819,7 +819,7 @@
             
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-  ImgJpg
+<span class="glyphicon glyphicon-screenshot"></span>
 </a>  
 <script>
   $('#save_image_locally').click(function(){
