--- a/example/index.html
+++ b/example/index.html
@@ -807,19 +807,19 @@
 
             <div id="main-controls">
               <a href="#" class="btn btn-default btn-sm" id="new">
-                Nuovo
+              <span class="glyphicon glyphicon-refresh"></span>       <!-- Nuovo  -->
               </a>
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
-                Salva
+              <span class="glyphicon glyphicon-download-alt"></span>   <!--  Salva -->
               </a>
               <a class="btn btn-sm btn-default btn-file">
                <input type="file" class="hidden-input" id="loadFile">
-               Carica
+               <span class="glyphicon glyphicon-folder-open"></span>  <!-- Carica -->
               </a>
             
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-<span class="glyphicon glyphicon-screenshot"></span>
+<span class="glyphicon glyphicon-screenshot"></span>                  <!--  ImgJpg -->
 </a>  
 <script>
   $('#save_image_locally').click(function(){
