--- a/example/index.html
+++ b/example/index.html
@@ -133,7 +133,9 @@
 
             <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
  <!--  -->           <br />
-            <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i></label>
+            <label><span class="text-muted" style="color:green" id="prez">Prezzo: </span><i><span id="modelPricetot"></span></i>
+	    <br><span class="text-muted" style="color:green" id="infoiva">IVA inclusa</span>	    
+	    </label>
             <br /><br />
               
             <a class="btn btn-block btn-success" href="" id="modelBuybasketlink" target="_blank">
